--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async-retry": "^1.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "micro": "^9.3.4",
     "nanoid": "^3.1.30",
